<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MapsActivity" />

    <AutoCompleteTextView
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        android:hint="@string/search_bar_hint"
        android:imeOptions="actionDone"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/save_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/save_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        android:onClick="pinLocation"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/save_btn_cd"
        android:src="@drawable/ic_save"
        app:layout_constraintEnd_toStartOf="@id/bookmark_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/bookmark_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:onClick="showAllPins"
        android:src="@drawable/ic_bookmark"
        android:layout_marginEnd="2dp"
        android:background="@android:color/black"
        android:contentDescription="@string/bookmark_btn_cd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_gps"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:onClick="gpsIconClicked"
        android:src="@drawable/ic_gps"
        android:contentDescription="@string/gps_btn_cd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <ImageView
        android:id="@+id/ic_alarm"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/black"
        android:contentDescription="@string/alarm_btn_cd"
        android:onClick="addAlarm"
        android:padding="2dp"
        android:src="@drawable/ic_add_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_gps" />

    <include
        android:id="@+id/bottom"
        layout="@layout/bottom_part"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>